--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,1 +1,7 @@
 <p class="row py-3 px-md-5 border bg-light text-black-50">first-component works!</p>
+<h2 >Name: {{name}} </h2>
+<h3 *ngFor="let carreira of carreiras">{{carreira}}</h3>
+<h3 *ngFor="let user of users" >ID: {{user.id}} = Nome: {{user.name}}</h3>
+
+
+
