--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <router-outlet></router-outlet>
 <app-first-component></app-first-component>
 <app-parent-data [userName]="userName" [userData]="userData"></app-parent-data>
+
+<app-directives></app-directives>
