--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <router-outlet></router-outlet>
-<app-first-component></app-first-component>
+<!-- <app-first-component></app-first-component>
 <app-parent-data [userName]="userName" [userData]="userData"></app-parent-data>
-
-<app-directives></app-directives>
+<app-directives></app-directives> 
+<app-if-render [name]="name"></app-if-render>
+<app-eventos></app-eventos>
+<app-emiter></app-emiter>
+<app-emiter2></app-emiter2>
+-->
+<app-list-render></app-list-render>
